# clerk

./: .bumpversion.toml  .dockerignore  .gitattributes  .gitignore  .prettierignore  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  tasks.ps1  tasks.py
app/: Makefile  conftest.py  dash.py  manage.py  openapi.generated.yaml  package.json  play.py  pyproject.toml  requirements.txt  streamlit.py  webpack.config.js
app/accounts/: access.py  admin.py  apps.py  events.py  handlers.py  models.py  registry.py  role.py  signals.py  social_auth.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_user_is_intern.py  0003_case_groups.py  0004_alter_user_email.py  0005_user_ms_account_created_at.py  0006_user_case_capacity.py  0007_add_lawyer_group.py  0008_alter_user_ms_account_created_at.py  0009_university_user_university.py  0010_alter_university_options.py  0011_alter_social_auth_usersocialauth_extra_data.py  0011_user_is_system_account.py  0012_migrate_user_email_username_domain.py  0012_user_is_system_account.py
app/accounts/tests/: test_access.py  test_auth_urls.py  test_role.py  test_signals.py
app/actionstep/: admin.py  apps.py  auth.py  constants.py  services.py  views.py
app/actionstep/api/: __init__.py  actions.py  base.py  emails.py  filenotes.py  files.py  participants.py  users.py
app/actionstep/migrations/: 0001_initial.py  0002_auto_20200513_1036.py  0003_accesstoken_is_active.py  0004_actiondocument.py  0005_actiondocument_actionstep_id.py  0006_auto_20200515_0506.py  0007_auto_20200918_0448.py  0008_auto_20200919_0340.py  0009_auto_20210219_1431.py  0010_alter_actiondocument_topic.py  0011_alter_actiondocument_topic.py
app/actionstep/models/: __init__.py  access_token.py  document.py
app/actionstep/services/: actionstep.py  pdf.py
app/actionstep/signals/: __init__.py  document.py  submission.py
app/actionstep/tests/: test_actionstep_api.py  test_actionstep_services.py
app/admin/: admin.py  apps.py
app/blacklist/: admin.py  apps.py  models.py  service.py
app/blacklist/migrations/: 0001_initial.py  0002_remove_blacklist_blacklist_blacklist_email_and_phone_not_null_and_more.py
app/blacklist/tests/: test_blacklist_service.py
app/caller/: admin.py  choices.py  models.py  views.py
app/caller/messages/: sms.py  voice.py
app/caller/migrations/: 0001_initial.py  0002_auto_20201111_1217.py  0003_auto_20201204_1418.py  0004_call_comments.py  0005_auto_20210219_1431.py  0006_alter_call_topic.py  0007_alter_call_topic.py  0008_alter_call_topic.py  0009_alter_call_topic.py  0010_alter_call_comments.py  0011_alter_call_topic.py  0012_alter_call_topic.py
app/caller/tests/: test_caller_views.py
app/case/: apps.py  forms.py  middleware.py  serializers.py  urls.py  utils.py  views.py
app/case/serializers/: __init__.py  account.py  client.py  client_detail.py  documents.py  email.py  fields.py  issue.py  issue_date.py  notification.py  person.py  service.py  tenancy.py  user.py  user_detail.py
app/case/static/: showdown.min.js
app/case/tests/: test_access_annotations.py  test_auth.py  test_case_urls.py  test_email_views.py  test_router.py  test_urls.py
app/case/utils/: __init__.py  dynamic_table_form.py  fields.py  htmx_form_view.py  pagination.py  react.py  router.py  selector.py  widgets.py
app/case/views/: __init__.py  accounts.py  auth.py  case.py  (+22 more)
app/clerk/: __init__.py  admin.py  auth.py  urls.py  utils.py  views.py  wsgi.py
app/core/: admin.py  apps.py  audit.py  factories.py  serializers.py  views.py
app/data/: postcode_to_suburb.json  suburb_to_postcode.json
app/emails/: admin.py  api.py  apps.py  factories.py  forms.py  models.py  service.py  signals.py  tasks.py  urls.py  views.py
app/frontend/: .babelrc  .prettierrc  babel.config.js  package-lock.json  package.json  webpack.base.js  webpack.config.js  webpack.dev.js  webpack.prod.js
app/google/: apps.py  service.py
app/intake/: apps.py  urls.py  utils.py  views.py
app/microsoft/: __init__.py  apps.py  base.py  folder.py  group.py  helpers.py  msgraph.py  service.py  storage.py  tasks.py  user.py  wrapper.py
app/notify/: admin.py  apps.py  models.py  signals.py
app/office/: admin.py  apps.py  factories.py  models.py
app/questions/: admin.py  apis.py  apps.py  factories.py  models.py  note.md  serializers.py  views.py
app/reports/: __init__.py  cases.py  demographics.py  issues.py  problems.py  referrals.py  submissions.py  utils.py  views.py
app/slack/: admin.py  models.py  services.py
app/task/: admin.py  apps.py  events.py  factories.py  helpers.py  notify.py  serializers.py  signals.py  tasks.py
app/templates/: client-intake.html
app/tenancy/: admin.py  apps.py
app/utils/: admin.py  sentry.py  signals.py  uploads.py
app/web/: admin.py  apps.py  blocks.py  factories.py  fields.py  forms.py  middleware.py  models.py  package-lock.json  package.json  sitemaps.py  urls.py  utils.py  views.py  wagtail_hooks.py
app/webhooks/: admin.py  apps.py  factories.py  models.py  serializers.py  views.py
app/webservice/: FirebaseAPI.py  constants.py  firebase_test.py  rules.json  webserver.py
(+1463 files in other folders)
