[project]
name = "clerk"
version = "0.1.0"
description = ""
requires-python = "==3.12.5"
authors = [
    { name = "Matt Segal", email = "matt.segal@anikalegal.com" },
    { name = "Luca Vari", email = "luca.vari@anikalegal.com" },
]
dependencies = [
    "awscli",
    "beautifulsoup4",
    "black",
    "boto3",
    "django-cleanup",
    "django-cors-headers",
    "django-override-storage",
    "django-q",
    "django-storages",
    "django-webpack-loader",
    "django",
    "djangorestframework",
    "drf-openapi-tester",
    "faker",
    "flake8",
    "freezegun",
    "gunicorn",
    "html-sanitizer",
    "isort",
    "mailchimp3",
    "msal",
    "openapi-spec-validator",
    "pillow",
    "psycopg2-binary",
    "pygments",
    "pytest-django",
    "pytest-factoryboy",
    "requests",
    "responses",
    "sendgrid",
    "sentry-sdk",
    "social-auth-app-django",
    "twilio",
    "tzdata",
    "wagtail-localize",
    "wagtail",
    "whitenoise",
]

[tool.uv]
dev-dependencies = [
    "debugpy",
    "django-browser-reload",
    "django-debug-toolbar",
    "django-extensions",
    "ipython",
    "setuptools",
    "watchdog[watchmedo]",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    #"ignore::django.utils.deprecation.RemovedInDjango50Warning",
    #"ignore::wagtail.utils.deprecation.RemovedInWagtail217Warning",
]
addopts = "--reuse-db --ds=clerk.settings.test"
