[project]
name = "clerk"
version = "0.1.0"
description = ""
requires-python = "==3.12.5"
authors = [
    { name = "Matt Segal", email = "matt.segal@anikalegal.com" },
    { name = "Luca Vari", email = "luca.vari@anikalegal.com" },
]
dependencies = [
    "awscli",
    "beautifulsoup4",
    "black",
    "boto3",
    "django-cleanup",
    "django-cors-headers",
    "django-override-storage",
    "django-q2",
    "django-storages",
    "django",
    "djangorestframework",
    "drf-openapi-tester",
    "faker",
    "flake8",
    "freezegun",
    "gunicorn",
    "html-sanitizer",
    "isort",
    "mailchimp3",
    "msal",
    "openapi-spec-validator",
    "pillow",
    "psycopg2-binary",
    "pygments",
    "pytest-django",
    "pytest-factoryboy",
    "requests",
    "responses",
    "sendgrid",
    "sentry-sdk",
    "social-auth-app-django",
    "twilio",
    "tzdata",
    "wagtail-localize",
    "wagtail>=7.2.0",
    "whitenoise",
    "django-vite>=3.1.0",
    "django-auditlog>=3.2.1",
    "crawler-user-agents>=1.21.0",
    "django-recaptcha>=4.1.0",
    "msgraph-sdk>=1.50.0",
]

[dependency-groups]
dev = [
    "debugpy",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.0.0",
    "django-extensions",
    "django-zeal>=2.0.4",
    "invoke>=2.2.0",
    "ipython",
    "setuptools",
    "watchdog[watchmedo]>=5.0.2",
]

[tool.uv]
# Our dependency on drf-openapi-tester limits django to version >=3 & <=4 but we
# can safely use a later django version. We should find a replacement for
# drf-openapi-tester anyway as it has been archived and is no longer being
# updated which is likely why its dependencies haven't been updated.
override-dependencies = ["django>=5"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::django.utils.deprecation.RemovedInDjango60Warning"]
addopts = "--reuse-db --ds=clerk.settings.test --ignore=.venv"
